--- a/styles.css
+++ b/styles.css
@@ -4,20 +4,13 @@
 img#img{
     border-radius: 50%;
 }
-
-nav{
-    max-width: 90%;
-    margin: 0 auto;
-}
-
 /* content */
 main{
-    max-width: 90%;
-    margin: 0 auto;
     display: grid;
     grid-template-columns: 50% 50%;
     column-gap: 4px;
     row-gap: 4px;
+    justify-content: space-between;
 }
 section.kotak-grid{
     background-color: white;
